# long_emotion_competition

./: AGENTS.md  README.md  pyproject.toml
outputs/: Emotion_Conversatin_Result.jsonl  Emotion_Summary_Result.jsonl  Emotion_Summary_Result_v2.jsonl
src/: config.yaml  llm.py  prompts.py  retriever.py  runner_mc.py  utils.py
src_ec_ed/: longemotion_runner.py
src_es/: README.md  config_es.yaml  runner_es.py
src_mc/: README.md  __init__.py  config.yaml  llm.py  prompts.py  retriever.py  runner_mc.py  utils.py
src_qa/: emotion_QA.py
